# wordle

./: .gitignore  .gitlab-ci.yml  Cargo.toml  HONOR-CODE.md  README.md  dict_gen.py  index.html  wordle-12dfca80f9e797e5.js  wordle-7bce9aa85805fbfb.js
assets/: dict.json  manifest.json
src/: app.rs  args.rs  builtin_words.rs  dict.rs  game.rs  main.rs  stats.rs
src/app/: colors.rs  definition.rs  grid.rs  keyboard.rs  letter.rs  metrics.rs  settings.rs  stats.rs  utils.rs  visuals.rs
tests/: basic_requirements.rs  common.rs
tests/cases/: .gitignore  01_01_single_game.ans  01_01_single_game.in  01_02_single_game.ans  01_02_single_game.in  01_03_single_game_with_invalid_input.ans  01_03_single_game_with_invalid_input.in  02_01_specify_answer.ans  02_01_specify_answer.args  02_01_specify_answer.in  03_01_difficult_mode.ans  03_01_difficult_mode.in  03_02_difficult_mode.ans  03_02_difficult_mode.args  03_02_difficult_mode.in  04_01_statistics_1.ans  04_01_statistics_1.args  04_01_statistics_1.in  04_02_statistics_2.ans  04_02_statistics_2.args  04_02_statistics_2.in  05_01_specify_seed.ans  05_01_specify_seed.args  05_01_specify_seed.in  05_02_specify_seed.ans  05_02_specify_seed.args  05_02_specify_seed.in  05_03_conflict_args.args  06_01_specify_word_list.ans  06_01_specify_word_list.args  06_01_specify_word_list.in  06_02_invalid_word_list.args  07_01_save_state.args  07_02_load_state.after.json  07_02_load_state.ans  07_02_load_state.args  07_02_load_state.before.json  07_02_load_state.in  07_03_invalid_json_format.args  07_03_invalid_json_format.before.json  (+8 more)
(+2 files in other folders)
