[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"
text_io = "0.1.12"
clap = { version = "3.2.17", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.143", features = ["derive"] }
serde_derive = "1.0.143"
getrandom = { version = "0.2.7", features = ["js"] }
eframe = { version = "0.19.0", features = ["persistence"] }
egui = "0.19.0"

[dev-dependencies]
lazy_static = "1.0"
assert-json-diff = "2.0"
ntest = "0.8"
pretty_assertions = "1.2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.82"
